--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" *ngIf="project">
     <h2>{{title}}</h2>
 
     <div class="message success" *ngIf="status == 'success'">
-        El proyecto se ha creado correctamente, puedes verlo <a href="http://">aqui</a>
+        El proyecto se ha creado correctamente, puedes verlo <a [routerLink]="['/proyecto', save_project._id]">aqui</a>
     </div>
 
     <div class="message failed" *ngIf="status == 'failed'">
@@ -50,6 +50,9 @@
 
         <p>
             <label for="image">Imagen del Proyecto</label>
+                <span class="image" *ngIf="project.image" style="float: none;">
+                    <img src="{{url+'get-image/'+project.image}}" style="width:100px;">
+                </span>
             <input type="file" name="image" placeholder="Subir Imagen" (change)="fileChangeEvent($event)">
         </p>
 
